--- a/COURSE_ASH/COURSE_ASH.csproj
+++ b/COURSE_ASH/COURSE_ASH.csproj
@@ -166,6 +166,7 @@
 	<ItemGroup>
 	  <PackageReference Include="CommunityToolkit.Maui" Version="1.3.0" />
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
+	  <PackageReference Include="FirebaseDatabase.net" Version="4.1.0" />
 	  <PackageReference Include="MonkeyCache" Version="2.0.0-beta" />
 	  <PackageReference Include="SimpleRatingControl.MAUI" Version="0.0.3" />
 	  <PackageReference Include="SkiaSharp.Extended.UI.Maui" Version="2.0.0-preview.61" />
